2003-11-23  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/diagram.c (diagram_update_menu_sensitivity): More
	intelligent checks for menu sensitivity.  Might be slow on huge
	diagrams, but I think other things outweigh it by a lot.

	* app/menus.[ch]: Make "Bring Forwards"
	and "Send Backwards" updateable.

2003-11-22  Steffen Macke <sdteffen@web.de>

	* shapes/Assorted/arrow-turn-up.shape:
	* shapes/Assorted/arrow-turn-up.png:
	* sheets/Assorted/Makefile.am:
	* sheets/Assorted.sheet.in: Added new arrow

2003-11-17  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/app_procs.c
	* app/color_area.c
	* app/commands.c
	* app/defaults.c
	* app/dia_embedd.c
	* app/diagram.c
	* app/diagram_tree.c
	* app/diagram_tree_menu.c
	* app/diagram_tree_window.c
	* app/diapagelayout.c
	* app/diaunitspinner.c
	* app/export_png.c
	* app/filedlg.c
	* app/interface.c
	* app/layer_dialog.c
	* app/lineprops_area.c
	* app/linewidth_area.c
	* app/menus.c
	* app/pagesetup.c
	* app/paginate_psprint.c
	* app/persistence.c
	* app/plugin-manager.c
	* app/preferences.c
	* app/properties.c
	* app/recent_files.c
	* app/sheets.c
	* app/sheets_dialog.c
	* app/sheets_dialog_callbacks.c
	* app/tool.c: Patch from Sebastien Tricaud <toady@gscore.org>:
	GTK-2 compatibility update, mostly gtk_foo -> g_foo.

	* TODO: Updated, note on EPS transparency.

2003-11-07  Lars Clausen  <lrclause@cs.uiuc.edu>

	* objects/UML/class.c (umlclass_draw): Allow classes with no name
	without crashing.

2003-11-01  Lars Clausen  <lrclause@cs.uiuc.edu>

	* config.h.win32: 
	* doc/en/dia-manual.xml: 
	* dia.spec: 
	* configure.in: 
	* NEWS: Another Brown Bag release for parenting problems,
	including a crash bug fix.

	* app/connectionpoint_ops.c (diagram_update_connections_object):
	Also update connections when moving children.  This can cause
	move_handle to be called twice, so it must be idempotent.

	* app/load_save.c: Loading and saving of children totally redone.
	Now doesn't violate assumption that all objects in a layer are